Changes
=======

Unreleased
----------

* Log to NATS
